[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/vanish_platform.gd" type="Script" id=1]
[ext_resource path="res://images/platform_full.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 60, 12 )

[node name="vanish_platform" type="StaticBody2D"]

position = Vector2( 30, 30 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="." index="0"]

position = Vector2( 30, -16 )
texture = ExtResource( 2 )

[node name="coll" type="CollisionPolygon2D" parent="." index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -30, -30, 92, -30, 92, -2, -30, -2 )

[node name="player_detector" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="coll" type="CollisionShape2D" parent="player_detector" index="0"]

position = Vector2( 30, -26 )
shape = SubResource( 1 )

[node name="vanish_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.7
one_shot = true
autostart = false

[node name="reappear_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false


